Portrait thing to try and fix the menu on mobile before I’m out all day >.<

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ a:focus {
     grid-area: footer;
 }
 
-@media screen and (min-width: 30em) {
+@media screen and (orientation:portrait) and (min-width: 30em) {
     .wrapper {
         grid-template-areas:
             "header header header"
